Implement enhanced wrestler filtering by alignment and gender (#166)
* feat: implement enhanced wrestler filtering by alignment and gender

- Updated ShowTemplate entity and DTO to support gender constraints.
- Added database migrations for gender_constraint column.
- Implemented findAllFiltered in WrestlerService to encapsulate filtering logic.
- Enhanced ShowTemplateListView to allow configuring gender constraints.
- Added reactive alignment and gender filters to segment booking UI (ShowPlanningView and ShowDetailView).
- Updated AI Show Planner to respect template gender constraints.
- Added unit tests in WrestlerServiceTest for the new filtering logic.
- Updated existing tests to accommodate service and constructor changes.

* refactor: optimize AI show planning by pre-filtering the roster

- Refactored ShowPlanningService to use the centralized wrestlerService.findAllFiltered method.
- Filtered the full roster by template gender constraint before sending it to the AI.
- Removed the explicit gender constraint instruction from the AI prompt since the data is now pre-filtered.
- Fixed missing imports and ensured consistency with existing project patterns.

* fix: update ShowPlanningServiceTest to match refactored service logic

- Updated testGetShowPlanningContext_FiltersInactiveWrestlers to mock findAllFiltered instead of findAll.
- Added missing static import for ArgumentMatchers.any.

* fix: update tests to match refactored wrestler filtering

- Updated ShowPlanningServiceIT and EditSegmentDialogTest to mock findAllFiltered instead of findAll.
- Fixed several failing integration tests caused by service-level refactoring.

* fix: update ShowDetailView and ShowPlanningAiService to improve wrestler filtering logic and set initial values correctly